video on ios fixed and other css changes

--- a/css/styles.css
+++ b/css/styles.css
@@ -118,3 +118,9 @@ a.anchor {
       margin-left: 0px;
   }
 }
+
+@media (min-width: 1200px) {
+  .container {
+    width: 1140px;
+  }
+}
