--- a/css/team.css
+++ b/css/team.css
@@ -1,10 +1,3 @@
-@media (max-width: 978px) {
-		.team-member {
-			padding:0;
-			margin:0;
-		}
-}
-
 .bio-section {
     margin-bottom: 20px;
     padding: 20px;
@@ -14,13 +7,15 @@
 
 .team-member{
 	cursor: pointer;
+	margin-bottom: 30px;
 }
 
 .team-member-photo{
 }
 
 .team-member-mouseover-box{
-	bottom:0;
+	/* hack to avoid overflow */
+	bottom:30px;
     top:0;
     left:15px;
     right:15px;
@@ -35,27 +30,4 @@
 
 .selected-team-member{
 	border:thin solid #607d8b;
-	
-}
-
-.col-xs-2 {
-	margin-bottom: 30px;
-}
-
-@media (max-width: 500px) {
-	.col-xs-2 {
-		padding-left: 3px;
-		padding-right: 3px;
-		margin-bottom: 6px;
-	}
-}
-
-@media (min-width: 1200px) {
-	.container {
-		width: 1140px;
-	}
-}
-
-p {
-	font-size: 16px;
 }
