--- a/css/video.css
+++ b/css/video.css
@@ -14,7 +14,7 @@
 	cursor: pointer;
 	opacity: 0.8;
 	transition: all 500ms ease;
-	}
+}
 
 .header-playbutton:hover {
 	opacity: 1;
@@ -39,6 +39,7 @@
 	height: 70%;
 	padding-right: 40px;
 	text-align: center;
+	cursor: pointer;
 }
 
 .header-placeholder > ul > li:nth-of-type(1){
@@ -158,10 +159,10 @@
 		display: block;
 	}
 
-	.col-sm-4 {
+/*	.col-sm-4 {
 		margin: 0 auto;
 		width: 85%
-	}
+	}*/
 }
 
 @media(max-width:500px) {
